OOP_step_136_WPF_WPFRoutedEvents

--- a/Lerning/OOP_step_135_WPF_MyWordPad/MainWindow.xaml
+++ b/Lerning/OOP_step_135_WPF_MyWordPad/MainWindow.xaml
@@ -6,22 +6,28 @@
         xmlns:local="clr-namespace:OOP_step_135_WPF_MyWordPad"
         mc:Ignorable="d"
         Title="My Spell Checker" Height="350" Width="525">
+    <Window.CommandBindings>
+        <CommandBinding Command="ApplicationCommands.Open" 
+                        Executed="OpenCmdExecuted" 
+                        CanExecute="OpenCmdCanExecute"/>
+        <CommandBinding Command="ApplicationCommands.Save" 
+                        Executed="SaveCmdExecuted" 
+                        CanExecute="SaveCmdCanExecute"/>
+    </Window.CommandBindings>
     <DockPanel>
         <Menu DockPanel.Dock="Top" Background="White" BorderBrush="Black" HorizontalAlignment="Left">
-
             <MenuItem Header="_File">
+                <MenuItem Command="ApplicationCommands.Open"/>
+                <MenuItem Command="ApplicationCommands.Save"/>
                 <Separator/>
                 <MenuItem Header="_Exit" MouseEnter="MouseEnterExitArea" MouseLeave="MouseLeaveArea" Click="FileExit_Click">
-
                 </MenuItem>
-            </MenuItem>
-            
+            </MenuItem>            
             <MenuItem Header="_Edit">
                 <MenuItem Command="ApplicationCommands.Copy"/>
                 <MenuItem Command="ApplicationCommands.Cut"/>
                 <MenuItem Command="ApplicationCommands.Paste"/>
             </MenuItem>
-
             <MenuItem Header="_Tools">
                 <MenuItem Header="_Spelling Hints" MouseEnter="MouseEnterToolsHintsArea" MouseLeave="MouseLeaveArea" Click="ToolsSpellingHints_Click">
                 </MenuItem>
