--- a/Lerning/OOP_step_146_WPF_WPFStyles/App.xaml
+++ b/Lerning/OOP_step_146_WPF_WPFStyles/App.xaml
@@ -2,12 +2,79 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:OOP_step_146_WPF_WPFStyles"
-             StartupUri="MainWindow.xaml">    
+             StartupUri="MainWindow.xaml">
     <Application.Resources>
-        <Style x:Key="BasicCantrolStyle">
-            <Setter Property="ItemsControl.FontSize" Value="14"/>
-            <Setter Property="ItemsControl.Height" Value="40"/>
-            <Setter Property="ItemsControl.Cursor" Value="Hand"/>
+        <Style x:Key="BasicCantrolStyle" TargetType="Control">
+            <Setter Property="FontSize" Value="14"/>
+            <Setter Property="Height" Value="40"/>
+            <Setter Property="Cursor" Value="Hand"/>
+        </Style>
+        <Style x:Key="BigGreenButton" TargetType="Button">
+            <Setter Property="FontSize" Value="20"/>
+            <Setter Property="Height" Value="100"/>
+            <Setter Property="Width" Value="150"/>
+            <Setter Property="Background" Value="DarkGreen"/>
+            <Setter Property="Foreground" Value="Yellow"/>
+        </Style>
+        <Style TargetType="TextBox">
+            <Setter Property="FontSize" Value="14"/>
+            <Setter Property="FontStyle" Value="Italic"/>
+            <Setter Property="Height" Value="100"/>
+            <Setter Property="Width" Value="30"/>
+            <Setter Property="BorderThickness" Value="2"/>
+            <Setter Property="BorderBrush" Value="Red"/>
+            <Setter Property="Background" Value="DarkGray"/>
+            <Style.Triggers>
+                <!--<Trigger Property="IsMouseOver" Value="True"/>-->
+                <MultiTrigger>
+                    <MultiTrigger.Conditions>
+                        <Condition Property="IsFocused" Value="True"/>
+                        <Condition Property="IsMouseOver" Value="True"/>
+                    </MultiTrigger.Conditions>
+                    <Setter Property="Background" Value="Yellow"/>
+                </MultiTrigger>
+            </Style.Triggers>
+            <!--<Style.Triggers> - пример единичного тригера
+                <Trigger Property="IsFocused" Value="True">
+                    <Setter Property="Background" Value="Orange"/>
+                </Trigger>
+            </Style.Triggers>-->
+        </Style>
+        <Style x:Key="TiltButton" TargetType="Button" BasedOn="{StaticResource BigGreenButton}">
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="RenderTransform">
+                <Setter.Value>
+                    <RotateTransform Angle="20"/>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        <Style x:Key="GrowingButtonStyle" TargetType="Button">
+            <Setter Property="FontSize" Value="15"/>
+            <Setter Property="Height" Value="40"/>
+            <Setter Property="Width" Value="100"/>
+            <Style.Triggers>
+                <Trigger Property="IsMouseOver" Value="True">                    
+                    <Trigger.EnterActions>
+                        <BeginStoryboard>
+                            <Storyboard TargetProperty="FontSize">
+                                <DoubleAnimation From="15" To="20" Duration="0:0:1" AutoReverse="True" RepeatBehavior="Forever"/>
+                            </Storyboard>
+                        </BeginStoryboard>
+                        <BeginStoryboard>
+                            <Storyboard TargetProperty="Height">
+                                <DoubleAnimation From="40" To="60" Duration="0:0:2" AutoReverse="True"/>
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </Trigger.EnterActions>
+                </Trigger>
+                <MultiTrigger>
+                    <MultiTrigger.Conditions>
+                        <Condition Property="IsFocused" Value="True"/>
+                        <Condition Property="IsMouseOver" Value="True"/>                        
+                    </MultiTrigger.Conditions>
+                    <Setter Property="Background" Value="Orange"/>
+                </MultiTrigger>
+            </Style.Triggers>
         </Style>
     </Application.Resources>
 </Application>
