--- a/Lerning/OOP_step_149_WPF_WpfNotifications/MainWindow.xaml
+++ b/Lerning/OOP_step_149_WPF_WpfNotifications/MainWindow.xaml
@@ -33,15 +33,15 @@
             <Label Grid.Column="0" Grid.Row="0" Content="Make"/>
             <TextBox Grid.Column="1" Grid.Row="0" Text="{Binding Path=Make}"/>
             <Label Grid.Column="0" Grid.Row="1" Content="Color"/>
-            <TextBox Grid.Column="1" Grid.Row="1" Text="{Binding Path=Color}"/>
+            <TextBox Grid.Column="1" Grid.Row="1" Text="{Binding Path=Color, UpdateSourceTrigger=PropertyChanged}"/>
             <Label Grid.Column="0" Grid.Row="2" Content="Pet Name"/>
             <TextBox Grid.Column="1" Grid.Row="2" Text="{Binding Path=PetName}"/>
             <StackPanel Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,5,0,5">
-                <Button x:Name="btnAddCar" Content="Add Car" Margin="5,0,5,0" Padding="4, 2" Click="btnAddCar_Click"/>
-                <Button x:Name="btnChangeColor" Content="Change Color" Margin="5,0,5,0" Padding="4, 2" Click="btnChangeColor_Click"/>
+                <Button x:Name="btnAddCar" Content="Add Car" Margin="5,0,5,0" Padding="4, 4" Click="btnAddCar_Click"/>
+                <Button x:Name="btnChangeColor" Content="Change Color" Margin="5,0,5,0" Padding="4, 4" Click="btnChangeColor_Click"/>
             </StackPanel>
             <Label Grid.Column="0" Grid.Row="4" Content="Is Changed"/>
-            <CheckBox Grid.Column="1" Grid.Row="4" VerticalAlignment="Center" Margin="10,0,0,0" IsEnabled="False" IsChecked="{Binding Path=IsChanged}"/>
+            <CheckBox Grid.Column="1" Grid.Row="4" VerticalAlignment="Center" Margin="10,0,200,0" IsEnabled="False" IsChecked="{Binding Path=IsChanged}"/>
         </Grid>
     </Grid>
 </Window>
