OOP_step_150_WPF_WpfValidations
- updated!

--- a/Lerning/OOP_step_150_WPF_WpfValidations/App.xaml
+++ b/Lerning/OOP_step_150_WPF_WpfValidations/App.xaml
@@ -4,6 +4,28 @@
              xmlns:local="clr-namespace:OOP_step_150_WPF_WpfValidations"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <Style TargetType="{x:Type TextBox}">            
+            <Style.Triggers>
+                <Trigger Property="Validation.HasError" Value="True">
+                    <Setter Property="Background" Value="DarkRed"/>
+                    <Setter Property="Foreground" Value="White"/>
+                    <Setter Property="ToolTip" 
+                            Value="{Binding RelativeSource={RelativeSource Mode=Self}, Path=(Validation.Errors)[0].ErrorContent}"/>
+                </Trigger>
+            </Style.Triggers>
+            <Setter Property="Validation.ErrorTemplate">
+                <Setter.Value>
+                    <ControlTemplate>
+                        <DockPanel LastChildFill="True">
+                            <TextBlock Foreground="Red" FontSize="20" Text="!"
+                                       ToolTip="{Binding ElementName=controlWithError, Path=(Adorner.AdornedElement).(Validation.Errors)[0].ErrorContent}"/>
+                            <Border BorderBrush="Violet" BorderThickness="1">
+                                <AdornedElementPlaceholder x:Name="controlWithError"/>
+                            </Border>
+                        </DockPanel>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
     </Application.Resources>
 </Application>
