--- a/Lerning/OOP_step_151_WPF_WpfComands/MainWindow.xaml
+++ b/Lerning/OOP_step_151_WPF_WpfComands/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="OOP_step_151_WPF_WpfComands.MainWindow"
+﻿<Window x:Class="OOP_step_151_WPF_WpfCommands.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:OOP_step_151_WPF_WpfComands"
+        xmlns:local="clr-namespace:OOP_step_151_WPF_WpfCommands"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid IsSharedSizeScope="True" Margin="5,0,5,5">
@@ -48,7 +48,7 @@
                 <Button x:Name="btnChangeColor" Content="Change Color" Margin="5,0,5,0" Padding="4, 4" Command="{Binding Path=ChangeColorCmd, 
                     RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}}"
                         CommandParameter="{Binding ElementName=cboCars, Path=SelectedItem}"/>
-                <Button x:Name="btnDeleteCar" Content="Delete Car" Margin="5,0,5,0" Padding="4, 4" Command="{Binding Path=DeletCarCmd, 
+                <Button x:Name="btnDeleteCar" Content="Delete Car" Margin="5,0,5,0" Padding="4, 4" Command="{Binding Path=DeleteCarCmd, 
                     RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}}"
                         CommandParameter="{Binding ElementName=cboCars, Path=SelectedItem}"/>
             </StackPanel>
